<resources>
    <string name="app_name">AgroCampo</string>

    <string name="Blogin">Login</string>
    <string name="Bregistro">Registrate</string>
    <string name="Email">Digite Email</string>
    <string name="Contra">Digite Contraseña</string>
    <string name="EmailR">Digite Email</string>
    <string name="ContraR">Confirme Contraseña</string>
    <string name="cc">Digite Cédula</string>
    <string name="Nombre">Digite Nombre</string>
    <string name="Profesion">Digite Profesión</string>
    <string name="Celular">Digite Celular</string>
    <string name="Registar">Registrar</string>
    <string name="Escuchar">Escuchando Pregunta</string>
    <string name="Responder">Preparando Respuesta</string>
    <string name="BTNCerrarSessionSi">Confirmar</string>
    <string name="buscador">Busque un producto</string>
    <string name="BTNEditarperfil">Editar</string>
    <string name="Cerrarperfil">Cerrar Sesión</string>

    <string name="BTNpagar">Comprar</string>


    <string name="tvproducto">Prodcuto</string>
    <string name="tvtipo">Tipo</string>

    <string name="CerrarSession">¿Desea Cerrar la sesion?</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="abtnCrear">Crear Proyecto</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Otros</string>
    <string name="Ajustes">Ajustes</string>

    <string name="cereal_nombre">Cereal</string>
    <string name="cereal_Descripcion">Cereal</string>
    <string name="cereal_Nutrientes">Cereal</string>
    <string name="cereal_Procesamiento">Cereal</string>
    <string name="cereal_fuente">Cereal</string>

    <string name="maiz_nombre">Maíz</string>
    <string name="maiz_Descripcion">Cereal</string>
    <string name="maiz_Nutrientes">Cereal</string>
    <string name="maiz_Procesamiento">Cereal</string>
    <string name="maiz_fuente">Cereal</string>


    <string name="arroz_nombre">Arroz</string>
    <string name="arroz_Descripcion">Cereal</string>
    <string name="arroz_Nutrientes">Cereal</string>
    <string name="arroz_Procesamiento">Cereal</string>
    <string name="arroz_fuente">Cereal</string>

    <string name="trigo_nombre">Trigo</string>
    <string name="trigo_Descripcion">Cereal</string>
    <string name="trigo_Nutrientes">Cereal</string>
    <string name="trigo_Procesamiento">Cereal</string>
    <string name="trigo_fuente">Cereal</string>

    <string name="mijo_nombre">Cereal</string>
    <string name="mijo_Descripcion">Cereal</string>
    <string name="mijo_Nutrientes">Cereal</string>
    <string name="mijo_Procesamiento">Cereal</string>
    <string name="mijo_fuente">Cereal</string>

    <string name="almidon_nombre">Cereal</string>
    <string name="almidon_Descripcion">Cereal</string>
    <string name="almidon_Nutrientes">Cereal</string>
    <string name="almidon_Procesamiento">Cereal</string>
    <string name="almidon_fuente">Cereal</string>

    <string name="legu_nombre">Cereal</string>
    <string name="legu_Descripcion">Cereal</string>
    <string name="legu_Nutrientes">Cereal</string>
    <string name="legu_Procesamiento">Cereal</string>
    <string name="legu_fuente">Cereal</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nproducto" type="id">nombreproducto</string>
    <string name="idprecio" type="id">precio</string>
    <string name="idcategoria" type="id">categoria</string>
    <string name="idcalidad" type="id">Calidad</string>
    <string name="idimageproducto" type="id">imagenproducto</string>
</resources>