<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/Asistente"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group />
    <item
        android:title="Ajustes">

        <menu>


            <item
                android:id="@+id/Ajustes"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/Ajustes" />
            <item
                android:id="@+id/nav_cerrarcesion"
                android:title="Cerrar cesion"
                android:icon="@drawable/logocinco"/>

            <item
                android:id="@+id/nav_ayuda"
                android:title="Ayuda"
                android:icon="@drawable/soporte"/>

        </menu>
    </item>
</menu>