<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ard.agrocampo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_cerrarSessionFragment"
            app:destination="@id/cerrarSessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ard.agrocampo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_Perfil" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ard.agrocampo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/asistenteFragment"
        android:name="com.ard.agrocampo.AsistenteFragment"
        android:label="fragment_asistente"
        tools:layout="@layout/fragment_asistente" />
    <fragment
        android:id="@+id/cerrarSessionFragment"
        android:name="com.ard.agrocampo.CerrarSessionFragment"
        android:label="fragment_cerrar_session"
        tools:layout="@layout/fragment_cerrar_session" >
        <action
            android:id="@+id/action_cerrarSessionFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>